# actionwire

./: Makefile  compare_csv.py  comparison_report.csv  config-2.json  config.json  config.mic.json  config.prod.json  pyproject.toml  words.json
actionwire/: action.py  color.py  config.py  convert_audio.py  data_types.py  event.py  light.py  logic.py  main.py  matching.py  mic.py  rule.py  synchan.py  utils.py  voice_detection.py  word_cloud.py
tests/: blink.py  compare_csv.py  read_script.py  rxpy_lab.py
