[tool.poetry]
name = "actionwire"
version = "0.1.0"
description = ""
authors = ["Justin Lin <wancat@wancat.cc>"]
readme = "README.md"
packages = [
    { include = "actionwire" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
vosk = "^0.3.45"
reactivex = "^4.0.4"
sounddevice = "^0.5.2"
jieba = "^0.42.1"
numpy = "^2.3.3"
lifxlan = {git = "https://github.com/mclarkk/lifxlan", rev = "master"}
python-socketio = "^5.13.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
ruff = "^0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
